--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ license = {text = "MIT"}
 requires-python = ">=3.8"
 dependencies = [
     "requests>=2.25.0",
+    "python-dotenv>=1.0.0",
+    "dotenv>=0.9.9",
 ]
 
 [project.optional-dependencies]
@@ -21,7 +23,4 @@ dev = [
 ]
 
 [tool.setuptools.packages.find]
-where = ["src"]
-
-[tool.setuptools.package-dir]
-"" = "src"
+where = ["."]
