--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "surus-ai"
+name = "boi"
 version = "0.1.0"
 description = "An opinionated way of doing AI - Task-oriented ai nodes for general-computing"
 readme = "README.md"
@@ -27,11 +27,12 @@ dependencies = [
     "requests>=2.25.0",
     "python-dotenv>=1.0.0",
     "twine>=6.1.0",
+    "pytest>=8.3.5",
 ]
 
 [project.urls]
 Homepage = "https://surus.lat"
-Repository = "https://github.com/surus-lat/surus-ai"
+Repository = "https://github.com/surus-lat/boi"
 Documentation = "https://docs.surus.lat"
 
 [project.optional-dependencies]
