--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include README.md
 include LICENSE
 include pyproject.toml
-recursive-include surus *.py
+recursive-include sulat *.py
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 recursive-exclude golem-docs *
