--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "owai"
+name = "sulat"
 version = "0.1.0"
 description = "An opinionated way of doing AI - Task-oriented ai nodes for general-computing"
 readme = "README.md"
@@ -30,17 +30,21 @@ dependencies = [
 
 [project.urls]
 Homepage = "https://surus.lat"
-Repository = "https://github.com/surus-lat/owai"
+Repository = "https://github.com/surus-lat/sulat"
 Documentation = "https://docs.surus.lat"
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
+    "pytest>=8.3.5",
     "black>=22.0.0",
     "ruff>=0.1.0",
     "twine>=6.1.0",
-    "pytest>=8.3.5",
 ]
 
 [tool.setuptools.packages.find]
 where = ["."]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
