[ADD] Autotune prompts with dspy on extract.py
- Added utility functions for data normalization, integer conversion, and dynamic signature creation.
- Implemented functions to load datasets from HuggingFace and infer output schemas.
- Introduced a mechanism to build training sets from examples and create universal metrics for evaluation.
- Enhanced the autotune function to optimize extraction processes with detailed logging and reporting.
- Updated the extract function to support loading optimized configurations from cache and fallback mechanisms.
- Improved error handling and added metadata saving for optimized programs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ classifiers = [
 dependencies = [
     "requests>=2.25.0",
     "python-dotenv>=1.0.0",
+    "dspy>=2.4.0",
+    "datasets>=2.0.0",
 ]
 
 [project.urls]
